GenShen: Old generation in unexpected state when abandoning mixed gc candidates

XMLWordPrintable

    • gc

      When the generational mode cannot add any old regions to a mixed collection because they are _all_ pinned, it gives up trying to evacuate these regions. The regions must then be made parsable. However, if this phase is interrupted by a young collection it should no longer try to evacuate any old regions. Doing so triggered an assert when testing with `-XX:ShenandoahCoalesceChance=80` and `XX:+ShenandoahAllocFailureALot`.

            Assignee:
            William Kemper
            Reporter:
            William Kemper
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: