8342861: GenShen: Old generation in unexpected state when abandoning mixed gc candidates

Reviewed-by: kdnilsen